--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,12 @@
-MONGODB_URI=mongodb://localhost:27017/dropshipping
 PORT=5000
-JWT_SECRET=your-secret-key 
+MONGODB_URI=mongodb://localhost:27017/dropshipping
+JWT_SECRET=your-secret-key
+FRONTEND_URL=http://localhost:3000
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=your-email@gmail.com 
