--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,27 @@
 {
   "name": "dropshipping-backend",
   "version": "1.0.0",
-  "description": "Backend for Dropshipping Platform",
-  "main": "src/app.ts",
+  "description": "Dropshipping backend using Node.js and Express",
+  "main": "src/index.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "dev": "nodemon src/app.ts",
-    "build": "tsc",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "jest"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^7.5.0",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.16",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.3",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1"
   }
-} 
+}
