--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.68.1
 uvicorn==0.15.0
 motor==2.5.1
+pymongo==3.12.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.5
@@ -12,14 +13,14 @@ pytest-asyncio==0.21.0
 pytest-cov==4.1.0
 schedule==1.2.0
 requests==2.31.0
-numpy==1.24.3
-pandas==2.0.2
-scikit-learn==1.2.2
-joblib==1.2.0
-celery==5.3.4
-redis==5.0.1
-pydantic==2.5.2
+numpy==1.21.6
+pandas==1.3.5
+scikit-learn==1.0.2
+joblib==1.1.1
+celery==5.2.7
+redis==4.5.4
+pydantic==1.10.12
 python-dotenv==1.0.0
-stripe==7.6.0
-httpx==0.25.2
-pymongo==4.6.1 
+stripe==5.4.0
+httpx==0.23.3
+structlog==23.1.0 
