--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.68.1
-uvicorn==0.15.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
 motor==2.5.1
 pymongo==3.12.0
 python-jose[cryptography]==3.3.0
@@ -19,7 +19,8 @@ scikit-learn==1.0.2
 joblib==1.1.1
 celery==5.2.7
 redis==4.5.4
-pydantic==1.10.12
+pydantic>=2.4.2
+pydantic-settings>=2.0.3
 python-dotenv==1.0.0
 stripe==5.4.0
 httpx==0.23.3
