--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ pymongo==3.12.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.5
-email-validator==1.1.3
+email-validator>=2.0.0
 boto3==1.26.137
 prometheus-client==0.16.0
 pytest==7.3.1
