--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,4 +24,5 @@ pydantic-settings>=2.0.3
 python-dotenv==1.0.0
 stripe==5.4.0
 httpx==0.23.3
-structlog==23.1.0 
+structlog==23.1.0
+aiohttp==3.8.5 
