feat(config): add ALGORITHM field for backward compatibility with JWT settings

--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB=dropshipping
 JWT_SECRET=your-secret-key-here
 JWT_ALGORITHM=HS256
+SECRET_KEY=your-secret-key-here
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 FRONTEND_URL=http://localhost:3000
 
