--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,28 +1,32 @@
-fastapi>=0.100.0
-uvicorn>=0.23.0
-motor==2.5.1
-pymongo==3.12.0
+fastapi==0.109.2
+uvicorn==0.27.1
+pydantic==2.5.3
+pydantic-settings==2.1.0
+motor==3.3.2
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.5
+python-multipart==0.0.6
+python-dotenv==1.0.1
+pytest==8.0.1
+pytest-asyncio==0.23.5
+httpx==0.26.0
+pytest-cov==4.1.0
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.0.0
+joblib>=1.0.0
+pymongo>=4.5.0,<5.0.0
 email-validator>=2.0.0
 boto3==1.26.137
 prometheus-client==0.16.0
-pytest==7.3.1
-pytest-asyncio==0.21.0
-pytest-cov==4.1.0
 schedule==1.2.0
 requests==2.31.0
-numpy==1.21.6
-pandas==1.3.5
-scikit-learn==1.0.2
-joblib==1.1.1
 celery==5.2.7
 redis==4.5.4
-pydantic>=2.4.2
-pydantic-settings>=2.0.3
-python-dotenv==1.0.0
 stripe==5.4.0
-httpx==0.23.3
 structlog==23.1.0
-aiohttp==3.8.5 
+aiohttp==3.8.5
+motor==3.3.2
+pymongo>=4.5.0,<5.0.0
+python-dateutil>=2.8.2
+pytz>=2023.3 
