--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn==0.27.1
 pydantic==2.5.3
 pydantic-settings==2.1.0
 motor==3.3.2
+pymongo==4.5.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
@@ -15,7 +16,6 @@ numpy>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.0.0
 joblib>=1.0.0
-pymongo>=4.5.0,<5.0.0
 email-validator>=2.0.0
 boto3==1.26.137
 prometheus-client==0.16.0
@@ -26,7 +26,5 @@ redis==4.5.4
 stripe==5.4.0
 structlog==23.1.0
 aiohttp==3.8.5
-motor==3.3.2
-pymongo>=4.5.0,<5.0.0
 python-dateutil>=2.8.2
 pytz>=2023.3 
