--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-pythonpath = .
+asyncio_mode = auto
 testpaths = tests
 python_files = test_*.py
-addopts = -v --cov=app --cov-report=term-missing 
+addopts = --verbose 
